trunk/Archive2/4f/7a7a143410dca0/output
main.cpp:14:5: error: static_assert failed
    static_assert(test("zyx"));
    ^             ~~~~~~~~~~~
1 error generated.
